implement player APIs, add cool logging context info
